style.css
/*
 * Theme Name: HacklabJkl Timber 2.x Theme
 * Description: Timber Starter Theme + PicoCSS + Flexboxgrid
 * Author: jasalt
 */


/*
 * Brand colors from Hacklab Jyväskylä logo https://github.com/HacklabJKL/logo/
 * Used by pico.lime.css and elsewhere to define CSS theme colors
 */
:root {
  --jkl-brand-color-primary: #91c270;
  --jkl-brand-color-light: #daebcf;
  --jkl-brand-color-dark: #1f3014;
  /* TODO add one shade between primary and dark */
}


/*
 * Navigation menu tweaks, mostly hacky workarounds to pico.css defaults
 */
svg.search-icon {
  color: var(--jkl-brand-color-primary);
}
svg.search-icon:hover {
  color: var(--jkl-brand-color-light);
}

/* Separate desktop and mobile menu */
@media only screen and (max-width: 768px) {
  #nav-main {
    display:none;
  }
}
@media only screen and (min-width: 769px) {
  #nav-mobile {
    display:none;
  }
}
/* Disable submenu dropdown button focus shadow  */
  nav details.dropdown summary:not([role]):focus {
    box-shadow: 0 0 0 0;
  }
/* Bigger mobile font and static color */
a.mobile-menulink {
  font-size: 1.2em;
  color: white;
}


/*
 * Footer overrides for using same colors for both light and dark theme variants.
 * a::selection color not overridden but could be also
 */
footer h1, footer h2, footer h3, footer h4, footer p {
  color: #f0f1f3; /* Light variant of --pico-h1-color */
}
footer a {
  color: var(--jkl-brand-color-primary);
  text-decoration-color: var(--jkl-brand-color-primary)
}
footer a:hover {
  text-decoration-color: #f0f1f3;
}

/*
 * Style compatibility hacks for plugins etc
 */

/* Index page calendar plugin compatibility */
.simcal-tooltip-content > p {
  color: var(--jkl-brand-color-dark);
  font-size: 1.4em;
}
.simcal-tooltip-content > p > a {
  color: var(--jkl-brand-color-dark);
  font-size: 1em;
}
.simcal-event-description > p {
  color: var(--jkl-brand-color-dark);
}


/* Knowledgebase / wiki style compatibility */
.wzkb h3 a {
  color: var(--pico-h3-color) !important;
}

